feat(react router): react rouer

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -4,6 +4,11 @@
   --iconColor: #333333;
   --iconSize: 24px;
   --minWidth: 1024px;
+  --musicBarHeight: 88px;
+  --headerHeight: 64px;
+  --musicBarBackgroundColor: #fff;
+  --sideBarWidth: 200px;
+  --defaultPadding: 5px 20px;
 }
 
 .dark {
