--- a/src/layout/defalutLayout/header/header.module.css
+++ b/src/layout/defalutLayout/header/header.module.css
@@ -1,7 +1,7 @@
 .header {
   width: 100%;
   background-color: var(--backgroundColor);
-  height: 69px;
+  height: var(--headerHeight);
   display: flex;
   justify-content: space-between;
   align-items: center;
