--- a/src/layout/defalutLayout/musicBar/musicBar.module.css
+++ b/src/layout/defalutLayout/musicBar/musicBar.module.css
@@ -1,7 +1,7 @@
 .musicBar {
-  position: fixed;
+  position: absolute;
   bottom: 0;
-  height: 88px;
+  height: var(--musicBarHeight);
   border-top: 1px solid #e5e5e5;
   width: 100%;
   display: flex;
@@ -10,6 +10,7 @@
   min-width: 1024px;
   padding: 0 20px;
   box-sizing: border-box;
+  background-color: var(--musicBarBackgroundColor);
 }
 
 .musicInfo {
@@ -36,7 +37,7 @@
 }
 
 .icon {
-  margin: 0 15px;
+  margin: 0 10px;
   font-size: var(--iconSize);
   color: var(--iconColor);
 }
@@ -53,5 +54,8 @@
   transform: translate3d(-50%, 0, 0);
 }
 .volume:hover .volumeControl {
+  display: block;
+}
+.volume:active .volumeControl {
   display: block;
 }
