--- a/src/pages/songSheet/SongSheet.module.css
+++ b/src/pages/songSheet/SongSheet.module.css
@@ -1,3 +1,19 @@
 .songSheet {
   padding: var(--defaultPadding);
 }
+
+.songSheetContent {
+  margin-top: 10px;
+}
+.tableHandle {
+}
+.tableHandle > * {
+  padding: 0 5px;
+  color: #bcbcbc;
+  line-height: 100%;
+  font-size: 16px;
+  cursor: pointer;
+}
+.tableHandle > * :hover {
+  color: #484848;
+}
