--- a/src/components/musicControl/MusicControl.module.css
+++ b/src/components/musicControl/MusicControl.module.css
@@ -6,6 +6,7 @@
   width: 100%;
   margin: 5px 0;
   user-select: none;
+  overflow: hidden;
 }
 
 .top {
@@ -14,7 +15,7 @@
   justify-content: center;
   align-items: center;
   color: #333333;
-  font-size: 24px;
+  font-size: 20px;
   margin-bottom: 5px;
 }
 
@@ -26,7 +27,7 @@
 }
 
 .playIcon {
-  padding: 8px;
+  padding: 5px;
   background: #f4f4f4;
   border-radius: 50%;
 }
