--- a/src/layout/defalutLayout/header/header.module.css
+++ b/src/layout/defalutLayout/header/header.module.css
@@ -16,9 +16,18 @@
 }
 
 .left {
+  position: absolute;
+  left: 200px;
+  z-index: 99999;
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  color: #fff;
+  transition: all 0.3s;
+}
+
+.left.leftOpenStyle {
+  color: black;
 }
 
 .navBar {
@@ -43,7 +52,6 @@
   margin-left: 10px;
   padding: 5px 10px;
   box-sizing: border-box;
-  color: #fff;
 }
 
 .navSearch input {
@@ -52,7 +60,7 @@
   border: none;
   outline: none;
   background-color: transparent;
-  color: #fff;
+
   font-size: 14px;
 }
 .navSearch .searchIcon:hover {
@@ -66,7 +74,7 @@
   text-align: center;
   line-height: 18px;
   height: 20px;
-  color: #fff;
+
   background-color: rgb(0, 0, 0, 0.05);
   border-radius: 50%;
   vertical-align: baseline;
