--- a/src/layout/defalutLayout/musicBar/musicBar.module.css
+++ b/src/layout/defalutLayout/musicBar/musicBar.module.css
@@ -11,6 +11,7 @@
   padding: 0 20px;
   box-sizing: border-box;
   background-color: var(--musicBarBackgroundColor);
+  z-index: 9999;
 }
 
 .musicInfo {
