--- a/src/layout/defalutLayout/musicBar/musicBarLeft/MusicBarLeft.module.css
+++ b/src/layout/defalutLayout/musicBar/musicBarLeft/MusicBarLeft.module.css
@@ -23,6 +23,26 @@
   overflow: hidden;
   border-radius: 10px;
   margin-right: 10px;
+  flex: 0 0 auto;
+  position: relative;
+  cursor: pointer;
+}
+
+.musicInfo .musicPic:hover .musicPicHover {
+  opacity: 1;
+}
+
+.musicInfo .musicPic .musicPicHover {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  line-height: 50px;
+  color: #fff;
+  transition: all 0.3s;
 }
 
 .musicInfo .musicPic img {
@@ -54,4 +74,37 @@
 .songInfo .songInfoAr {
   font-size: 14px;
   line-height: 20px;
+}
+.musicDetailCut {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.musicBarLeft .upBtn {
+  font-size: 22px;
+  padding: 5px;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.musicBarLeft .upBtn:hover {
+  background-color: #f5f5f5;
+}
+
+.musicBarLeft .musicDetailCutIcons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1 1 auto;
+}
+
+.musicDetailCutIconItem {
+  padding: 8px;
+  margin: 0 5px;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+}
+
+.musicDetailCutIconItem:hover {
+  background-color: #f5f5f5;
 }
