--- a/src/components/sideBar/sideBarItem/SideBarItem.module.css
+++ b/src/components/sideBar/sideBarItem/SideBarItem.module.css
@@ -3,12 +3,14 @@
   margin: 3px 0;
   padding: 0 8px;
   box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
 }
 
 .sideBarItem div {
   font-size: 14px;
   line-height: 40px;
-  cursor: pointer;
 }
 
 .sideBarItem:hover {
@@ -23,4 +25,9 @@
 .sideBarItem.active div {
   font-weight: bold;
   font-size: 17px;
+}
+
+.sideBarItem .icon {
+  margin-right: 5px;
+  font-size: 18px;
 }
