--- a/src/pages/component/songImgChangeSwriper/SongImgChangeSwiper.module.css
+++ b/src/pages/component/songImgChangeSwriper/SongImgChangeSwiper.module.css
@@ -3,13 +3,16 @@
   width: 100%;
   position: relative;
   perspective: 400px;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .imgWrap img {
   width: 100%;
   height: 100%;
   border-radius: 5px;
+  box-shadow: 0.6px 0.9px 0.8px rgba(0, 0, 0, 0.022), 1.4px 2.1px 1.9px rgba(0, 0, 0, 0.032),
+    2.6px 4px 3.6px rgba(0, 0, 0, 0.04), 4.7px 7.1px 6.5px rgba(0, 0, 0, 0.048),
+    8.8px 13.4px 12.1px rgba(0, 0, 0, 0.058), 21px 32px 29px rgba(0, 0, 0, 0.08);
 }
 
 .curImg {
@@ -21,7 +24,9 @@
   height: 85%;
   transition: all 0.5s;
   z-index: 10;
-  overflow: hidden;
+  /* overflow: hidden; */
+
+  border-radius: 5px;
 }
 
 .prevImg {
@@ -33,13 +38,12 @@
   height: 90%;
   transition: all 0.5s;
   z-index: 10;
-  overflow: hidden;
 }
 
 .nextImg {
   position: absolute;
   top: 50%;
-  left: 130%;
+  left: 80%;
   transform: translate3d(-50%, -50%, 0);
   width: 85%;
   height: 85%;
