--- a/src/pages/component/highQualitySongSheetItem/HighQualitySongSheetItem.module.css
+++ b/src/pages/component/highQualitySongSheetItem/HighQualitySongSheetItem.module.css
@@ -4,6 +4,7 @@
   height: 150px;
   display: flex;
   flex-direction: row;
+  cursor: pointer;
 }
 
 .imgWrap {
@@ -15,6 +16,7 @@
   border-radius: 5px;
   overflow: hidden;
   margin-right: 10px;
+  position: relative;
 }
 
 .imgWrap img {
@@ -87,4 +89,13 @@
   line-height: 30px;
   font-size: 14px;
   color: #999;
+}
+
+.highSheetImg {
+  width: 40px !important;
+  height: 40px;
+  position: absolute;
+  object-fit: cover;
+  top: 0;
+  left: 0;
 }
