fix: chang flex2grid

--- a/src/pages/HighQuality/HighQuality.module.css
+++ b/src/pages/HighQuality/HighQuality.module.css
@@ -1,7 +1,6 @@
 .listWrap {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
 }
 .listWrap > div {
   margin: 10px;
