--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -68,6 +68,12 @@
 }
 
 .container1000 {
-  width: 1000px;
+  max-width: 1000px;
   margin: 0 auto;
+}
+.sheetWrap {
+  margin-top: 10px;
+  display: grid;
+  grid-gap: 15px;
+  grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
 }
