--- a/src/layout/defalutLayout/content/Content.module.css
+++ b/src/layout/defalutLayout/content/Content.module.css
@@ -4,6 +4,11 @@
   display: flex;
 }
 
+@media (max-width: 1024px) {
+  .siderBar {
+    display: none;
+  }
+}
 .siderBar {
   border-right: 1px solid #e5e5e5;
   height: 100%;
