--- a/src/pages/home/rank/Rank.module.css
+++ b/src/pages/home/rank/Rank.module.css
@@ -10,7 +10,7 @@
 }
 
 .sheetWrap {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  display: grid;
+  grid-gap: 15px;
+  grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
 }
