--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -77,3 +77,13 @@
   grid-gap: 15px;
   grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
 }
+
+.fullScreen:fullscreen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background-color: rgb(255, 255, 255);
+}
