--- a/src/components/changpian/Changpian.module.css
+++ b/src/components/changpian/Changpian.module.css
@@ -1,6 +1,19 @@
+.songPicWrap {
+  position: relative;
+  height: 420px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.5s;
+  width: 280px;
+  margin: 0 auto;
+}
+
 .changZhen {
   position: absolute;
-  top: 10px;
+  top: 0;
   left: 115px;
   width: 120px;
   transform-origin: 10px 10px;
@@ -10,7 +23,6 @@
 }
 
 .changPian {
-  margin-top: 80px;
   width: 280px;
   height: 280px;
   border-radius: 50%;
