--- a/src/layout/defalutLayout/header/header.module.css
+++ b/src/layout/defalutLayout/header/header.module.css
@@ -1,12 +1,17 @@
+.dragWrap {
+  -webkit-app-region: drag;
+}
 .header {
   width: 100%;
   background-color: var(--backgroundColor);
   height: var(--headerHeight);
   display: flex;
+
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
   box-sizing: border-box;
+  /* -webkit-app-region: no-drag; */
 }
 
 .logoWraper {
@@ -24,6 +29,7 @@
   justify-content: flex-start;
   color: #fff;
   transition: all 0.3s;
+  -webkit-app-region: no-drag;
 }
 
 .left.leftOpenStyle {
@@ -35,6 +41,7 @@
   align-items: center;
   justify-content: flex-start;
   margin-left: 50px;
+  -webkit-app-region: no-drag;
 }
 
 .navBtn {
@@ -49,9 +56,19 @@
   background-color: rgb(0, 0, 0, 0.05);
   border-radius: 20px;
   width: 150px;
+  color: #fff;
   margin-left: 10px;
   padding: 5px 10px;
   box-sizing: border-box;
+}
+.navSearch input {
+  width: 100%;
+  height: 100%;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  color: #fff;
+  font-size: 14px;
 }
 
 .navSearch input {
@@ -63,6 +80,11 @@
 
   font-size: 14px;
 }
+
+.navSearch {
+  margin-right: 5px;
+}
+
 .navSearch .searchIcon:hover {
   color: rgba(255, 255, 255, 0.72);
 }
@@ -90,6 +112,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  -webkit-app-region: no-drag;
 }
 
 .icon {
@@ -107,6 +130,7 @@
   height: 100%;
   padding: 10px 0;
   box-sizing: border-box;
+  -webkit-app-region: no-drag;
 }
 
 .loginItem {
@@ -126,4 +150,117 @@
   box-sizing: border-box;
   border-radius: 50%;
   /* margin-right: 10px; */
+}
+
+.eletronControlIcon {
+  display: flex;
+  flex-direction: row;
+  margin-left: 10px;
+}
+.eletronControlIconItem {
+  color: var(--color);
+  padding: 5px;
+  margin: 5px;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+.searchInfoTipWrap {
+  position: absolute;
+  top: calc(var(--headerHeight) - 15px);
+  background-color: rgb(255, 255, 255);
+  left: 10%;
+  display: block;
+  padding: 10px;
+  box-sizing: border-box;
+  box-shadow: 0px 0px 3.6px rgba(0, 0, 0, 0.042), 0px 0px 10px rgba(0, 0, 0, 0.06),
+    0px 0px 24.1px rgba(0, 0, 0, 0.078), 0px 0px 80px rgba(0, 0, 0, 0.12);
+  border-radius: 5px;
+  min-width: 350px;
+  color: #000;
+  max-height: 450px;
+  overflow-y: auto;
+}
+
+.hotSearchTitle {
+  font-size: 14px;
+  color: #000;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.hotSearchItem {
+  height: 60px;
+  line-height: 60px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.hotSearchItem:hover {
+  background-color: #f2f2f2;
+}
+
+.hotItemInfo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.hotItemKeyWord {
+  height: 30px;
+  line-height: 30px;
+}
+.hotItemContent {
+  height: 20px;
+  line-height: 20px;
+  font-size: 14px;
+  color: #747474;
+}
+
+.hotItemIndex {
+  color: #c2c2c2;
+  width: 40px;
+  text-align: center;
+}
+
+.hotItemIndex0 {
+  color: #ff3a8a;
+  font-weight: bold;
+  width: 40px;
+  text-align: center;
+}
+
+.hotItemIndex1 {
+  color: #ff3a3a;
+  font-weight: bold;
+  width: 40px;
+  text-align: center;
+}
+
+.hotItemIndex2 {
+  color: #fd813e;
+  font-weight: bold;
+  width: 40px;
+  text-align: center;
+}
+
+.hotItemSearchWord {
+  color: #000;
+  width: 200px;
+  text-align: center;
+  font-size: 14px;
+  margin-right: 10px;
+}
+
+.hotSearchBold {
+  font-weight: bold;
+}
+
+.hotItemScore {
+  color: #c2c2c2;
+  width: 100px;
+  text-align: center;
+  font-size: 14px;
 }
