--- a/src/pages/search/Search.module.css
+++ b/src/pages/search/Search.module.css
@@ -1,3 +1,8 @@
 .searchWrap {
   padding: var(--defaultPadding);
 }
+.searchKeyword {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
