--- a/src/pages/search/songTabPage/SongTabPage.module.css
+++ b/src/pages/search/songTabPage/SongTabPage.module.css
@@ -7,6 +7,10 @@
 }
 .tableHandle {
   height: 40px;
-  display: flex;
-  align-items: center;
+  line-height: 40px;
+}
+
+.headerHandle {
+  height: 50px;
+  line-height: 50px;
 }
