feat: 新增搜索推荐，优化搜索页，修复持久化bug

--- a/src/pages/component/PlayListHeader/headerButton/HeaderButton.module.css
+++ b/src/pages/component/PlayListHeader/headerButton/HeaderButton.module.css
@@ -16,6 +16,7 @@
 .headerButton > * {
   display: inline-block;
   margin-right: 5px;
+  vertical-align: middle;
 }
 .headerButton .icon {
   font-size: 16px;
