--- a/src/pages/search/Search.module.css
+++ b/src/pages/search/Search.module.css
@@ -8,3 +8,15 @@
   font-weight: bold;
   margin-bottom: 10px;
 }
+.searchTabBar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.tabRightCount {
+  font-weight: bold;
+  font-size: 18px;
+  color: #ec4141;
+}
