--- a/src/pages/component/tabBar/TabBar.module.css
+++ b/src/pages/component/tabBar/TabBar.module.css
@@ -4,7 +4,7 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  height: 34px;
 
+  flex-wrap: wrap;
   line-height: 34px;
 }
