--- a/src/components/progressBar/ProgressBar.module.css
+++ b/src/components/progressBar/ProgressBar.module.css
@@ -1,7 +1,6 @@
 .progress {
-  width: 300px;
+  width: 100%;
   height: 100%;
-  margin: 0 15px;
   display: flex;
   align-items: center;
 }
@@ -9,7 +8,6 @@
 .progress .progressBar {
   background-color: #e5e5e5;
   width: 100%;
-  height: 3px;
   position: relative;
   border-radius: 2px;
 }
@@ -28,6 +26,7 @@
 
 .progress:hover .dot {
   visibility: visible;
+  opacity: 1;
 }
 
 .curBar {
@@ -50,14 +49,16 @@
 
 .dot {
   visibility: hidden;
-  width: 10px;
-  height: 10px;
+  width: 15px;
+  height: 15px;
   position: absolute;
   right: 0;
   background: #ee5959;
   top: 50%;
+  opacity: 0;
   transform: translate(50%, -50%);
   border-radius: 50%;
+  transition: opacity 0.3s ease-in-out;
 }
 
 .dot:active {
@@ -65,6 +66,6 @@
 }
 
 .dot:hover {
-  width: 11px;
-  height: 11px;
+  width: 15px;
+  height: 15px;
 }
