--- a/src/components/videoPlayer/VideoPlayer.module.css
+++ b/src/components/videoPlayer/VideoPlayer.module.css
@@ -3,11 +3,23 @@
   background-color: black;
   user-select: none;
 }
-.videoWrapper video {
+
+.videoWrapper:hover .videoControl {
+  opacity: 1;
+}
+
+.videoWrapper .video {
   position: relative;
   width: 100%;
   height: 100%;
 }
+
+.videoWrapper .video video {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
 .videoControl {
   display: flex;
   flex-direction: column;
@@ -18,7 +30,10 @@
   width: 100%;
   padding: 0 10px;
   box-sizing: border-box;
-  /* background-color: rgba(255, 255, 255, 0.5); */
+
+  opacity: 1;
+  transition: all 0.5s;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.971) 100%);
 }
 
 .controlTop {
@@ -57,7 +72,6 @@
 }
 
 .fullscreen {
-  padding: 0 5px;
   font-size: 20px;
   transform: scale(1);
   cursor: pointer;
@@ -97,8 +111,46 @@
 .volume {
   display: flex;
   flex-direction: row;
-  margin: 0 10px;
 }
 .volumeBar {
   width: 100px;
+}
+
+.right > div {
+  margin-right: 15px;
+}
+
+.selectBr {
+  position: relative;
+  padding: 0 5px;
+}
+
+.selectBr:hover .selectList {
+  display: flex;
+}
+
+.selectList {
+  display: none;
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  flex-direction: column;
+  right: 0;
+}
+
+.selectItem {
+  background-color: rgba(2, 2, 2, 0.539);
+  height: 30px;
+  line-height: 30px;
+  width: 100%;
+  text-align: center;
+  cursor: pointer;
+}
+.selectItem:hover {
+  color: #ee5959;
+}
+
+.selectItem.activeBr {
+  color: #ee5959;
+  font-weight: bold;
 }
