feat: 更新路由懒加载，图片懒加载，页面初始加载完成时间缩短50%

--- a/src/components/videoPlayer/VideoPlayer.module.css
+++ b/src/components/videoPlayer/VideoPlayer.module.css
@@ -30,8 +30,7 @@
   width: 100%;
   padding: 0 10px;
   box-sizing: border-box;
-
-  opacity: 1;
+  opacity: 0;
   transition: all 0.5s;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.971) 100%);
 }
@@ -136,6 +135,7 @@
   left: 0;
   flex-direction: column;
   right: 0;
+  z-index: 10;
 }
 
 .selectItem {
