--- a/src/pages/videoDetail/VideoDetail.module.css
+++ b/src/pages/videoDetail/VideoDetail.module.css
@@ -5,11 +5,74 @@
   display: flex;
   justify-content: center;
   box-sizing: content-box;
-  background-color: aliceblue;
+}
+
+.mainContent {
+  width: 721px;
+}
+
+.contentHeader {
+  margin: 10px 0 10px 0;
 }
 
 .sideBar {
-  flex: 0 0 400px;
+  flex: 0 0 350px;
   background-color: #f5f5f5;
   margin-left: 30px;
+}
+
+.videoTitle {
+  font-size: 26px;
+  font-weight: 500;
+  height: 40px;
+  line-height: 40px;
+}
+
+.desc {
+  text-indent: 2em;
+  font-size: 14px;
+  line-height: 1.5;
+  font-weight: 500;
+}
+
+.videoInfo {
+  line-height: 2;
+  font-size: 14px;
+  color: #666;
+}
+
+.descWrap {
+  margin-top: 10px;
+  height: 84px;
+  overflow: hidden;
+  transition: height 0.3s;
+}
+.descMore {
+  height: auto;
+}
+
+.artists {
+  margin: 10px 0;
+}
+
+.artist {
+  display: flex;
+  flex-direction: row;
+  height: 50px;
+  line-height: 50px;
+  align-items: center;
+  justify-content: flex-start;
+  cursor: pointer;
+}
+
+.artist img {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.commentWrap {
+  margin-top: 20px;
 }
