--- a/src/assets/css/transition.css
+++ b/src/assets/css/transition.css
@@ -79,3 +79,52 @@
   opacity: 1;
   transition: opacity 0.5s ease-in;
 }
+
+/* ==================bounce-fade======================= */
+
+/*入场动画开始*/
+.bounce-fade-enter {
+  transform: scale(0.8) translate(-50%, -50%) !important;
+  opacity: 0;
+}
+
+/*入场动画过程*/
+.bounce-fade-enter-active {
+  opacity: 1;
+}
+
+/*入场动画结束*/
+.bounce-fade-enter-done {
+  transform: scale(1) translate(-50%, -50%) !important;
+  opacity: 1;
+}
+
+/*离场动画开始*/
+.bounce-fade-exit {
+  transform: scale(1) translate(-50%, -50%);
+  opacity: 1;
+}
+
+/*离场动画过程*/
+.bounce-fade-exit-active {
+  opacity: 0;
+  transition: opacity 0.5s ease-in;
+}
+
+/*离场动画结束*/
+.bounce-fade-exit-done {
+  opacity: 0;
+}
+
+/*页面第一次加载时的开始状态*/
+.bounce-fade-appear {
+  transform: scale(0) translate(-50%, -50%);
+  opacity: 0;
+}
+
+/*页面第一次加载时的动画过程*/
+.bounce-fade-appear-active {
+  transform: scale(1) translate(-50%, -50%);
+  opacity: 1;
+  transition: opacity 0.5s ease-in;
+}
