--- a/src/pages/videoDetail/mv/MVDetail.module.css
+++ b/src/pages/videoDetail/mv/MVDetail.module.css
@@ -21,7 +21,7 @@
   margin-left: 30px;
 }
 
-.videoTitle {
+.mvTitle {
   font-size: 26px;
   font-weight: 500;
   height: 40px;
@@ -35,7 +35,7 @@
   font-weight: 500;
 }
 
-.videoInfo {
+.mvInfo {
   line-height: 2;
   font-size: 14px;
   color: #666;
@@ -43,7 +43,7 @@
 
 .descWrap {
   margin-top: 10px;
-  height: 84px;
+  max-height: 84px;
   overflow: hidden;
   transition: height 0.3s;
 }
