--- a/src/components/loading/Loading.module.css
+++ b/src/components/loading/Loading.module.css
@@ -9,6 +9,7 @@
   align-items: center;
   z-index: 9999;
   animation: fadeIn 0.3s ease-in-out;
+  pointer-events: none;
 }
 .loadingContent {
   display: inline-block;
