--- a/src/pages/component/userInfoHeader/UserInfoHeader.module.less
+++ b/src/pages/component/userInfoHeader/UserInfoHeader.module.less
@@ -6,7 +6,7 @@
   width: 100%;
   height: 100%;
   background-color: #fff;
-
+  gap: 10px;
   .avatar {
     flex: 0 0 auto;
     width: 200px;
@@ -23,5 +23,80 @@
   .right {
     flex: 1 1 auto;
     align-self: flex-start;
+
+    .nikename {
+      font-size: 24px;
+      font-weight: bold;
+      margin-bottom: 5px;
+    }
+    .base {
+      height: 30px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      font-size: 12px;
+      gap: 5px;
+      .level {
+        vertical-align: middle;
+        padding: 0 5px;
+        line-height: 24px;
+        background-color: #f0f0f0;
+        border-radius: 10px;
+      }
+      .gender {
+        border-radius: 50%;
+        padding: 5px;
+
+        &.man {
+          background-color: #c0f3ff;
+          color: #3da1d1;
+        }
+        &.woman {
+        }
+      }
+    }
+    .infoData {
+      display: flex;
+      flex-direction: row;
+
+      .infoDataItem {
+        padding: 0 15px;
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        align-items: center;
+        cursor: pointer;
+        .data {
+          font-size: 20px;
+          font-weight: 500;
+          margin-bottom: 5px;
+          color: #000;
+        }
+        span {
+          font-size: 12px;
+          color: #676767;
+        }
+        &::after {
+          content: '';
+          display: block;
+          position: absolute;
+          right: 0;
+          top: 0;
+          width: 1px;
+          height: 100%;
+          background-color: #d2d2d2;
+        }
+      }
+      :last-child {
+        &::after {
+          content: none;
+        }
+      }
+    }
+    .other {
+      font-size: 12px;
+      line-height: 25px;
+      color: #676767;
+    }
   }
 }
