fix: 项目改为使用pnpm作为包管理工具

--- a/src/components/comment/CommentItem.module.less
+++ b/src/components/comment/CommentItem.module.less
@@ -50,6 +50,15 @@
   height: 25px;
   line-height: 25px;
   font-size: 12px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  .star {
+    cursor: pointer;
+    &.liked {
+      color: #ff3a3a;
+    }
+  }
 }
 
 .footer .time {
