--- a/src/pages/component/userInfoHeader/UserInfoHeader.module.less
+++ b/src/pages/component/userInfoHeader/UserInfoHeader.module.less
@@ -52,6 +52,8 @@
           color: #3da1d1;
         }
         &.woman {
+          background-color: #ffcde8;
+          color: #e8528f;
         }
       }
     }
